TypedLama/regression/compile_error/test001.1.lama
-- Type(1) = Int, but Type(z) = Str -- type error, because int ~! str
-- uncomment next line to get type error:
local z :: Str = 1;